Transference-service/route/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: transference-service
  namespace: swiftpix
  labels:
    app: transference-service
spec:
  host: transference-service.swiftpix.software
  to:
    kind: Service
    name: transference-service
    weight: 100
  port:
    targetPort: 5010-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
